welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: not found: value leverBrosse
  leverBrosse()
  ^