welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def isFacingTrail():Boolean =
{
  // retourne si le buggle est face ? une case verte
  
  leverBrosse()
  
  if (estFaceMur())
  {
    baisseBrosse()
  	return false
  }
  else
  {
    var surCaseVerte = false
    
    avance()
    surCaseVerte = (getCouleurSol() == Color.green)
    recule()
    baisseBrosse()    
    
    return surCaseVerte
  }
}

def hunt()
{
  while(!estSurBiscuit())
  { 
    if (isFacingTrail())
    	avance()
    else
    {
      gauche()
      
      if (isFacingTrail())
      	avance()
      else
      {
        droite()
        droite()
        
        if (isFacingTrail())
      		avance()
        else
        	gauche()
      }
    }
  }
  
  prendBiscuit()
}